Добавлен листинг всех пользователей

--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Главная</a>
+                        <a class="nav-link active" aria-current="page" href="/users">Пользователи</a>
                         </li>
                     </ul>
                     {{if not .}}
