--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -28,6 +28,19 @@
                     <button type="submit" class="btn btn-">Добавить в друзья</button>
                     </form>
                 {{end}}
+
+                {{if .User.Friends}}
+                    <div class="row">
+                        <div class="col">
+                            <h2>Друзья:</h2>
+                            {{range $f := .User.Friends}}
+                            <ul>
+                                <li><a href="/user/{{$f.Login}}">{{ $f.FirstName }} {{ $f.Lastname }}</a></li>
+                            </ul>
+                            {{end}}
+                        </div>
+                    </div>
+                {{end}}
             </div>
             <div class="col-md-9">
                 <div class="row">
@@ -48,20 +61,31 @@
                         {{end}}
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3>Посты:</h3>
+                        {{if not .AuthenticatedUser }}
+                        {{else if (eq .AuthenticatedUser.ID .User.ID) }}
+                            <form action="/user/{{.User.Login}}/add_post" method="POST">
+                                <textarea class="form-control" name="post" id="postMessage" rows="3"></textarea>
+                                <button type="submit" class="btn btn-primary" style="margin-top: 10px;">Написать</button>
+                            </form>
+                        {{end}}
+                    </div>
+                </div>
+                <div class="row" style="margin-top:10px;">
+                    <div class="col-md-12">
+                        {{range .User.Posts}}
+                        <div class="card" style="margin-top:5px;">
+                            <div class="card-body">
+                                <p class="card-text">{{.Body}}</p>
+                            </div>
+                        </div>
+                        {{end}}
+                    </div>
+                </div>
             </div>
         </div>
-        {{if .User.Friends}}
-        <div class="row">
-            <div class="col">
-                <h2>Друзья:</h2>
-                {{range $f := .User.Friends}}
-                <ul>
-                    <li><a href="/user/{{$f.Login}}">{{ $f.FirstName }} {{ $f.Lastname }}</a></li>
-                </ul>
-                {{end}}
-            </div>
-        </div>
-        {{end}}
     </div>
     {{template "scripts"}}
 </body>
