Created websocket server with hot feed update

--- a/templates/header.html
+++ b/templates/header.html
@@ -6,6 +6,9 @@
                         <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/users">Пользователи</a>
                         </li>
+                        <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/feed">Новости</a>
+                        </li>
                     </ul>
                     {{if not .}}
                     <ul class="navbar-nav ml-auto">
